fix: DEV-3487 Align comment icons into the same columns with annotation and drafts in dropdown selector

--- a/src/components/TopBar/Annotations.styl
+++ b/src/components/TopBar/Annotations.styl
@@ -41,7 +41,7 @@
 
   &__icons
     display flex
-    justify-content center
+    justify-content flex-end
     align-items center
 
   &__name
